# text_to_label

./: .gitignore  0_feedback.py  0_health.py  0_predict.py  README.md  app.py  config.py  issue_data.csv  main.py  pyproject.toml  train_model.py  算法说明文档.md
models/: issue_classifier.pkl  tfidf_vectorizer.pkl
utils/: __init__.py
