[project]
name = "t-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "jieba==0.42.1",
    "joblib==1.3.2",
    "matplotlib==3.8.2",
    "nltk==3.8.1",
    "numpy==1.26.2",
    "pandas==2.1.4",
    "pydantic==2.5.3",
    "python-multipart==0.0.6",
    "scikit-learn==1.3.2",
    "seaborn==0.13.1",
    "uvicorn==0.27.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
